feat: add genre population and the db objects to store genres
